# lua_playground

./: .gitignore  CMakeLists.txt  main.cpp
include/: lua_execution.h
lua_scripts/: mult.lua
src/: lua_execution.cpp
